--- a/code/iOS_app/tonightapp/tonightapp/Base.lproj/Main_iPhone.storyboard
+++ b/code/iOS_app/tonightapp/tonightapp/Base.lproj/Main_iPhone.storyboard
@@ -260,9 +260,17 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        <searchBar key="tableHeaderView" contentMode="redraw" id="bfr-aF-qfQ">
+                            <rect key="frame" x="0.0" y="64" width="320" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <textInputTraits key="textInputTraits"/>
+                            <connections>
+                                <outlet property="delegate" destination="xhG-W1-xg4" id="i03-me-ZEq"/>
+                            </connections>
+                        </searchBar>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Event" rowHeight="220" id="31K-rA-fM1" customClass="EventFeedTableViewCell">
-                                <rect key="frame" x="0.0" y="86" width="320" height="220"/>
+                                <rect key="frame" x="0.0" y="130" width="320" height="220"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="31K-rA-fM1" id="RYJ-bF-pTm">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="220"/>
@@ -310,8 +318,21 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="7Sn-jf-L4S"/>
+                    <connections>
+                        <outlet property="searchBar" destination="bfr-aF-qfQ" id="fKw-pa-TZx"/>
+                        <outlet property="searchDisplayController" destination="CI4-e0-V4P" id="HCq-Ao-oNB"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Xak-wB-Yk7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="CI4-e0-V4P">
+                    <connections>
+                        <outlet property="delegate" destination="xhG-W1-xg4" id="wmR-h2-NDa"/>
+                        <outlet property="searchBar" destination="bfr-aF-qfQ" id="YMi-yK-SdV"/>
+                        <outlet property="searchContentsController" destination="xhG-W1-xg4" id="Wus-Lp-zfK"/>
+                        <outlet property="searchResultsDataSource" destination="xhG-W1-xg4" id="QSE-2J-G11"/>
+                        <outlet property="searchResultsDelegate" destination="xhG-W1-xg4" id="3ex-0l-EpQ"/>
+                    </connections>
+                </searchDisplayController>
             </objects>
             <point key="canvasLocation" x="1252" y="-505"/>
         </scene>
